--- a/css/register.css
+++ b/css/register.css
@@ -1,22 +1,21 @@
 body, html{
+    background: linear-gradient(rgba(127, 77, 212, 0.5),rgba(127, 77, 212, 0.5)), url(Images/background.jpg);
     font-family: 'Poppins', sans-serif;
     height: 100%;
     margin: 0;
 }
 #background{
-    background: linear-gradient(rgba(127, 77, 212, 0.5),rgba(127, 77, 212, 0.5)), url(Images/background.png);
+    background: linear-gradient(rgba(127, 77, 212, 0.5),rgba(127, 77, 212, 0.5)), url(Images/background.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     height: 100%;
 }
 .Container{
-    background-color: #fff3c8a9;
     margin: 0 auto;
     max-width: 500px;
-    height: 984px;
+    height: 100%;
     padding: 20px;
-    background: #fff3c8a9;
 }
 .register{
     padding-top: 100px;
@@ -76,3 +75,13 @@ a:hover::before{
     transform-origin: left;
     transform: scaleX(1);
 } 
+.select{
+    width: 100%;
+    height: 40px;
+    border: 1px solid yellow;
+    border-radius: 5px;
+    margin: 15px auto;
+    margin-bottom: 10px;
+    padding: 10 10px;
+    font-size: 16px;
+}
